# adapton.rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MPL2.0  README-Cruft.md  README.md  travis.sh
.github/workflows/: ci.yml
benches/: benches.rs  tries_bench.rs
blog/: .gitignore  Gc.Md  Intro.Md  Zippers.md
examples/: assoctypes.rs  balfp.ml  exists.rs  exp.rs  exp2.rs  exp3.rs  exp4.rs  invoke.rs  obmt.rs
hooks/post-receive/: git-slack-hook
rust-play/: assoctypes.rs  balfp.ml  exp.rs  exp2.rs  iterators.rs
src/: .#list.rs  adapton.rs  adapton_fromscratch.rs  adapton_impl.rs  adapton_impl_rest.rs  adapton_sigs.rs  adapton_state.rs  adapton_syntax.rs  arith_parse.rs  art.rs  balfp.rs  bitstring.rs  challengeWhile.rs  challenge_while.rs  collection.rs  collection_algo.rs  collection_edit.rs  collection_traits.rs  collections.rs  engine.rs  gm.rs  gm_impl.rs  lib.rs  list.rs  macros.rs  main.rs  naive.rs  name.rs  obmt.rs  parse_val.rs  reflect.rs  simple.rs  structures.rs  trie.rs  trie_meta.rs
src/catalog/: arith_parse.rs  bitstring.rs  collections.rs  fixpoints.rs  mod.rs  trie.rs
tests/: countgraph.rs  engine.rs  fact.rs  lib.rs  listedit.rs  listzipper.rs  name.rs  purecaching.rs  tests.rs  triesets.rs
