[package]
name = "adapton"
version = "0.2.4"
authors = ["Matthew A. Hammer <Matthew.Hammer@Colorado.Edu>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "Library for Incremental Computation (implicit dependency graphs & memoization)"

# These URLs point to more information about the repository
documentation = "https://github.com/cuplv/adapton.rust/"
homepage = "http://adapton.org"
repository = "https://github.com/cuplv/adapton.rust/"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["Self-Adjusting", "Incremental", "Memoization", "Dependency-Graph"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MPL-2.0"

# If a project is using a nonstandard license, then this key may be specified in
# lieu of the above key and must point to a file relative to this manifest
# (similar to the readme key)
# license-file = "LICENSE-MPL2.0"

## For testing
[dependencies]
#rand = "0.3"
#log = "0.3.*"
#quickcheck = "0.2.24"
time = "0.1"
csv  = "0.14.4"

#[dependencies.quickcheck]
#git = "https://github.com/ebfull/quickcheck.git"

#[dependencies.quickcheck_macros]
#git = "https://github.com/ebfull/quickcheck.git"

# [dependencies.heapsize]
# git = "https://github.com/servo/heapsize"
